--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
  <!DOCTYPE html>
+<!-- Microdata markup added by Google Structured Data Markup Helper. -->
 <html>
     <head>
         <meta charset="UTF-8">
@@ -34,9 +35,9 @@
             });
         });
         </script>
-        <div class="container">
+        <div itemscope itemtype="http://schema.org/LocalBusiness" class="container">
             <a href="index.html">
-                <img class="logo" src="_img/dimennalogo.png" alt="DiMenna Brothers Painting and Power Washing" />
+                <img itemprop="image" class="logo" src="_img/dimennalogo.png" alt="DiMenna Brothers Painting and Power Washing" />
             </a>
             <ul>
                 <a href="services.html">
@@ -94,11 +95,11 @@
                 </div>
                 <div class="column2">
                     <h5>Experience that Counts</h5>
-                    <p>For over 25 years, DiMenna Brothers Painting &amp; Power Washing has provided quality painting and power washing services to Philadelphia&rsquo;s western suburbs. We have the experience and expertise to provide all of your residential painting and power washing needs.</p>
+                    <p>For over 25 years, <span itemprop="name">DiMenna Brothers Painting &amp; Power Washing</span> has provided quality painting and power washing services to Philadelphia&rsquo;s western suburbs. We have the experience and expertise to provide all of your residential painting and power washing needs.</p>
                 </div>
                 <div class="column3">
                     <h5>Call for a Free Estimate, Today!</h5>
-                    <p>We take great pride in our award-winning customer service and stand behind our work.  Your satisfaction is guaranteed. <a href="http://www.angieslist.com/companylist/us/pa/royersford/dimenna-brothers-painting-and-pressure-washing-reviews-7612469.htm" target="_blank">See our reviews on Angie’s List</a> and call us, today!<br /><br /><br /><strong>610-724-6352</strong></p>
+                    <p>We take great pride in our award-winning customer service and stand behind our work.  Your satisfaction is guaranteed. <a href="http://www.angieslist.com/companylist/us/pa/royersford/dimenna-brothers-painting-and-pressure-washing-reviews-7612469.htm" target="_blank">See our reviews on Angie’s List</a> and call us, today!<br /><br /><br /><strong itemprop="telephone">610-724-6352</strong></p>
                 </div>
             </div>
             <footer>
