--- a/about.html
+++ b/about.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Microdata markup added by Google Structured Data Markup Helper. -->
 <html>
     <head>
         <meta charset="UTF-8">
@@ -32,9 +33,9 @@
             });
         });
         </script>
-        <div class="container">
+        <div itemscope itemtype="http://schema.org/LocalBusiness" class="container">
             <a href="index.html">
-                <img class="logo" src="_img/dimennalogo.png" alt="DiMenna Brothers Painting and Power Washing" />
+                <img itemprop="image" class="logo" src="_img/dimennalogo.png" alt="DiMenna Brothers Painting and Power Washing" />
             </a>
             <ul>
                 <a href="index.html">
@@ -48,10 +49,10 @@
                 </a>
             </ul>
             <img class="alist" src="_img/alist.png" alt="See my reviews on Angie&rsquo;s List!" />
-            <p>Winner&nbsp;of<br />2013<br />Angie&rsquo;s&nbsp;List<br />Super&nbsp;Service<br />Award<p></p>
+            <p>Winner&nbsp;of<br />2013-2020<br />Angie&rsquo;s&nbsp;List<br />Super&nbsp;Service<br />Award<p></p>
             <div class="content">
                 <div class="aboutus">
-                    <p>For over 25 years, DiMenna Brothers Painting &amp; Power Washing has been providing quality painting and power washing services Philadelphia&rsquo;s western suburbs. Using the highest quality materials, we make your life easier and work with you from the beginning to the end of your home improvement or cleaning project. </p>
+                    <p>For over 25 years, <span itemprop="name">DiMenna Brothers Painting &amp; Power Washing</span> has been providing quality painting and power washing services Philadelphia&rsquo;s western suburbs. Using the highest quality materials, we make your life easier and work with you from the beginning to the end of your home improvement or cleaning project. </p>
                     <p>We have old family values no other company can beat. We provide a personalized experience and will work closely with you to ensure that the job is completed promptly and efficiently. You can be at ease knowing that you&rsquo;ll have a trustworthy team of three brothers working on your home painting project.<br /><br /></p>
                     <a href="_assets/DiMenna_200.jpg" data-lightbox="services"><img class="lbimg" src="_assets/DiMenna_200th.jpg" alt="DiMenna Brothers Painting and Power Washing" /></a>
                     <a href="_assets/DiMenna_201.jpg" data-lightbox="services"><img class="lbimg" src="_assets/DiMenna_201th.jpg" alt="DiMenna Brothers Painting and Power Washing" /></a>
@@ -68,7 +69,7 @@
                 </div>
             </div>
             <footer>
-                <p>&copy; 2015 Dimenna Brothers Painting &amp; Power Washing, all rights reserved.</p>
+                <p>&copy; 2020 Dimenna Brothers Painting &amp; Power Washing, all rights reserved.</p>
             </footer>
         </div>
     </body>
