--- a/services.html
+++ b/services.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Microdata markup added by Google Structured Data Markup Helper. -->
 <html>
     <head>
         <meta charset="UTF-8">
@@ -33,9 +34,9 @@
             });
         });
         </script>
-        <div class="container">
+        <div itemscope itemtype="http://schema.org/LocalBusiness" class="container">
             <a href="index.html">
-                <img class="logo" src="_img/dimennalogo.png" alt="DiMenna Brothers Painting and Power Washing" />
+                <img itemprop="image" class="logo" src="_img/dimennalogo.png" alt="DiMenna Brothers Painting and Power Washing" />
             </a>
             <ul>
                 <a href="index.html">
@@ -49,10 +50,10 @@
                 </a>
             </ul>
             <img class="alist" src="_img/alist.png" alt="See my reviews on Angie&rsquo;s List!" />
-            <p>Winner&nbsp;of<br />2013<br />Angie&rsquo;s&nbsp;List<br />Super&nbsp;Service<br />Award<p></p>
+            <p>Winner&nbsp;of<br />2013-2020<br />Angie&rsquo;s&nbsp;List<br />Super&nbsp;Service<br />Award<p></p>
             <div class="content">
                 <div class="aboutus">
-                    <p>For over 25 years, DiMenna Brothers Painting &amp; Power Washing has been providing quality painting and power washing services Philadelphia&rsquo;s western suburbs. Using the highest quality materials, we make your life easier and work with you from the beginning to the end of your home improvement or cleaning project. </p>
+                    <p>For over 25 years, <span itemprop="name">DiMenna Brothers Painting &amp; Power Washing</span> has been providing quality painting and power washing services Philadelphia&rsquo;s western suburbs. Using the highest quality materials, we make your life easier and work with you from the beginning to the end of your home improvement or cleaning project. </p>
                    <p>We provide...</p><br />
                     <ul>
                         <li>Free estimates</li>
@@ -61,7 +62,7 @@
                         <li>Deck staining</li>
                         <li>Wall paper removal<br /><br /></li>
                     </ul>            
-                    <p>We&rsquo;re proud to service the western suburbs of Philadelphia and the Main Line. King of Prussia, Audubon, Jeffersonville, Eagleville, East Norriton, West Norriton, Collegeville, Limerick, Royersford, Spring City, Phoenixville, Kimberton, and Chester Springs, East Coventry, &amp; more!<br /><br /></p>
+                    <p itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">We&rsquo;re proud to service the western suburbs of Philadelphia and the Main Line. King of Prussia, Audubon, Jeffersonville, Eagleville, East Norriton, West Norriton, Collegeville, Limerick, <span itemprop="addressLocality">Royersford</span>, Spring City, Phoenixville, Kimberton, and Chester Springs, East Coventry, &amp; more!<br /><br /></p>
                     <a href="_assets/DiMenna_100.jpg" data-lightbox="services"><img class="lbimg" src="_assets/DiMenna_100th.jpg" alt="DiMenna Brothers Painting and Power Washing" /></a>                  
                     <a href="_assets/DiMenna_102.jpg" data-lightbox="services"><img class="lbimg" src="_assets/DiMenna_102th.jpg" alt="DiMenna Brothers Painting and Power Washing" /></a>
                     <a href="_assets/DiMenna_103.jpg" data-lightbox="services"><img class="lbimg" src="_assets/DiMenna_103th.jpg" alt="DiMenna Brothers Painting and Power Washing" /></a>      
@@ -77,7 +78,7 @@
                 </div>
             </div>
             <footer>
-                <p>&copy; 2015 Dimenna Brothers Painting &amp; Power Washing, all rights reserved.</p>
+                <p>&copy; 2020 Dimenna Brothers Painting &amp; Power Washing, all rights reserved.</p>
             </footer>
         </div>
     </body>
