Fall special front page

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                 <div class="rotator">
                     <ul class="rslides">
                         <li>
+                            <img src="_assets/Fall-Special-2020.png" alt="Fall Special 2020" />
+                        </li>
+						<li>
                             <img src="_assets/DiMenna_000.jpg" alt="DiMenna Brothers Painting and Power Washing" />
                         </li>
                         <li>
